# ffmpeg-contact

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
ffmpeg/: README.txt
scripts/: Склеить видео.cmd
src/: main.py
src/core/: models.py  process.py  settings.py  utils.py
src/env/: .env.template
src/logging_settings/: formatters.py  models.py  settings.py  utils.py
